# framehold-engine

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  compose.dev.yml  manage.py  pyproject.toml
apps/accounts/: admin.py  display.py  managers.py  models.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: test_allauth_configuration.py  test_user_model.py
apps/sitecontent/: apps.py  models.py
apps/sitecontent/migrations/: 0002_create_homepage.py
apps/sitecontent/templates/sitecontent/: home_page.html
apps/sitecontent/tests/: test_wagtail_foundation.py
docs/: ACCOUNT_DELETION_AND_DATA_LIFECYCLE.md  ADMIN_WORKFLOW.md  ARCHITECTURE.md  CHANGELOG.md  CODING_RULES.md  CONTENT_RIGHTS_AND_MEDIA_ACCESS.md  DATA_MODEL.md  DECISIONS.md  DEPLOYMENT.md  DEVELOPMENT.md  FILE_INDEX.md  FUTURE_IDEAS.md  MEDIA_PRESENTATION.md  OPEN_SOURCE_AND_THIRD_PARTY_POLICY.md  OWNERSHIP_AND_ISOLATION.md  PERMISSIONS.md  PRIVACY_AND_OPERATOR_RESPONSIBILITIES.md  PRODUCT_PRINCIPLES.md  PRODUCT_VISION.md  PROJECT_STATE.md  PUBLIC_SITE.md  README.md  REGISTRATION_AND_ACCOUNTS.md  REQUIREMENTS.md  ROADMAP.md  SECURITY_NOTES.md  TECHNICAL_FOUNDATION.md  TECH_STACK.md  THEME_SYSTEM.md  UI_DESIGN.md  WORK_LOG.md
framehold/: asgi.py  urls.py  wsgi.py
framehold/settings/: base.py  dev.py  prod.py  test.py
licenses/: README.md
templates/: base.html
tests/: test_database_settings.py  test_settings_imports.py
