[project]
name = "framehold-engine"
version = "0.1.0"
description = "A self-hosted, multi-user photo portfolio engine built around curated themes and owner-controlled galleries."
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "AGPL-3.0-or-later"
dependencies = [
    "django>=5.2.15,<5.3",
    "django-allauth>=65.18.0,<66",
    "django-environ>=0.13,<0.14",
    "psycopg[binary]>=3.3.4,<4",
    "wagtail>=7.4.2,<7.5",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.18",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "framehold.settings.test"
python_files = ["test_*.py"]
addopts = "-ra"
